@@ -46,6 +46,10 @@ New Features
   and its subclasses: SpanPositionRangeQuery, SpanPayloadCheckQuery, 
   SpanNearPayloadCheckQuery, SpanFirstQuery. (Paul Elschot, Robert Muir)
 
+* LUCENE-6394: Add two-phase support to SpanNotQuery and refactor
+  FilterSpans to just have an accept(Spans candidate) method for
+  subclasses. (Robert Muir)
+
 * LUCENE-6352: Added a new query time join to the join module that uses
   global ordinals, which is faster for subsequent joins between reopens.
   (Martijn van Groningen, Adrien Grand)
